--- a/MiniDo/Info.plist
+++ b/MiniDo/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleDisplayName</key>
-	<string>MiniDo</string>
+	<string>Little Wonder</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -26,9 +26,7 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Dosis-Book.ttf</string>
-		<string>Dosis-Medium.ttf</string>
-		<string>Dosis-ExtraLight.ttf</string>
+		<string>Lato-Light.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
